--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PigeonPoopCoin ($POOP)</title>
+    <title>PigeonPoopCoin ($POOP) - The Feathered Revolution!</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Custom animation for HeroSection mascot image */
